@startuml
skinparam classAttributeIconSize 0

title auto-filter-file-app Class Diagram

package "application" {
  class Rule {
    - keyword
    - path
    + __init__(keyword, path)
    + matches(filename)
  }

  class RuleEngine {
    - rules
    - default_path
    + __init__(rules, default_path=None)
    + find_destination(filename)
  }

  class FileSorter {
    - rule_engine
    - file_repo
    - logger
    + __init__(rule_engine, file_repo, logger)
    + sort(filepath)
  }
}

package "infra" {
  class FileRepository {
    - root_path
    + __init__(root_path)
    + move(src, relative_path)
  }

  class Logger {
    + log(message)
  }
}

package "ui" {
  class MainWindow {
    - sorter
    - config
    - timer
    - incoming_input
    - root_input
    - keyword_input
    - path_input
    - rule_list
    - log
    - btn_start
    - btn_end
    + __init__(sorter, config)
    + select_folder(field)
    + add_rule()
    + delete_rule()
    + refresh_rules()
    + start()
    + end()
    + process_incoming_files()
    + dark_theme()
  }
}

class QWidget
class QTimer

MainWindow --|> QWidget
MainWindow *-- QTimer
MainWindow --> FileSorter : uses

RuleEngine "1" o-- "*" Rule : contains
FileSorter --> RuleEngine : uses
FileSorter --> FileRepository : uses
FileSorter --> Logger : uses

@enduml
